--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Name of Destination</h1>
+	<p>loremfjshagkjashgkjas</p>
+	<ol>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+	</ol>
+	<ul>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+		<li><em>Item1</em></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
