--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Name of Destination</h1>
+	<h1>Name of Destination</h1><br>
 	<p>loremfjshagkjashgkjas</p>
 	<ol>
 		<li><em>Item1</em></li>
