--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Name of Destination</h1><br>
+	<h1>Name of Destination</h1><b>
 	<p>loremfjshagkjashgkjas</p>
 	<ol>
-		<li><em>Item1</em></li>
+		<li><i>Item1</i></li>
 		<li><em>Item1</em></li>
 		<li><em>Item1</em></li>
 		<li><em>Item1</em></li>
